--- a/tio-websocket-spring-demo/.gitignore
+++ b/tio-websocket-spring-demo/.gitignore
@@ -1,5 +1,5 @@
 /target/
-!.mvn/wrapper/maven-wrapper.jar
+# !.mvn/wrapper/maven-wrapper.jar
 
 ### STS ###
 .apt_generated
@@ -10,6 +10,7 @@
 .springBeans
 .sts4-cache
 .classpath
+.mvn
 
 ### IntelliJ IDEA ###
 .idea
